<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipe.RecipeListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            <include layout="@layout/recipe_shimmer_placeholder_layout" />

            </LinearLayout>


        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_recipe" />

        <TextView
            android:id="@+id/recipe_text_view_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:text="@string/result_error"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/recipe_button_retry"
            app:layout_constraintEnd_toEndOf="@+id/recipe_button_retry"
            app:layout_constraintStart_toStartOf="@+id/recipe_button_retry"
            tools:visibility="visible" />

        <Button
            android:id="@+id/recipe_button_retry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/ic_retry"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/recipe_text_view_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_result_found"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>